# rust_middle_class

./: .gitignore
exercise/benchmark/: Cargo.toml
exercise/benchmark/benches/: snuggle_speed.rs
exercise/benchmark/src/: lib.rs
exercise/channels/: Cargo.toml  README.md
exercise/channels/src/: main.rs
exercise/closures_iterators/src/: main.rs
exercise/deriable_traits/: Cargo.toml
exercise/deriable_traits/src/: main.rs
exercise/docs/src/: main.rs
exercise/exceptions/: Cargo.toml
exercise/exceptions/src/: lib.rs  main.rs
exercise/idiomatic/src/: main.rs
exercise/iterator/src/: main.rs
exercise/kitchen/: Cargo.toml  README.md
exercise/kitchen/src/: main.rs
exercise/logging/: Cargo.toml
exercise/logging/src/: main.rs
exercise/logging_exercise/: Cargo.toml
exercise/logging_exercise/src/: lib.rs  main.rs
exercise/multi_threading/src/: main.rs
exercise/publishing/: Cargo.toml
exercise/puzzle_game/: Cargo.toml
exercise/puzzle_game/src/: main.rs
exercise/puzzles/: Cargo.toml
exercise/puzzles/src/: lib.rs
exercise/tests/: Cargo.toml
exercise/tests/benches/: sploosh_speed.rs
exercise/tests/src/: lib.rs  main.rs  practice.rs
exercise/tests/tests/: anything.rs  more_tests.rs
exercise/threads_channels/: Cargo.toml
exercise/threads_channels/src/: main.rs
rusty_engine_project/: README.md
rusty_engine_project/road_race/: Cargo.toml
rusty_engine_project/road_race/src/: main.rs
rusty_engine_project/tutorial/: Cargo.toml
rusty_engine_project/tutorial/assets/: gopher.collider
rusty_engine_project/tutorial/src/: main.rs
